完善一下 等待工具执行，忽然发起问话时的流程。